// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function InterviewerCallPattern() with data and invalid data should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-2"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <a
          download="interviewer-call-pattern-thorne1.csv"
          href="data:text/csv;charset=utf-8,﻿\\"hours_worked\\",\\"call_time\\",\\"hours_on_calls_percentage\\",\\"average_calls_per_hour\\",\\"refusals\\",\\"completed_successfully\\",\\"appointments_for_contacts\\",\\"web_nudge\\",\\"no_contacts\\",\\"discounted_invalid_cases\\",\\"answer_service\\",\\"busy\\",\\"disconnect\\",\\"no_answer\\",\\"invalid_telephone_number\\",\\"other\\"
\\"26:58:07\\",\\"01:31:32\\",\\"5.66%\\",\\"3.86\\",\\"4/133, 3.01%\\",\\"0/133, 0.00%\\",\\"81/133, 60.90%\\",\\"5/133, 3.76%\\",\\"11/133, 8.27%\\",\\"29/162, 17.90%\\",\\"4/11, 36.36%\\",\\"1/11, 9.09%\\",\\"2/11, 18.18%\\",\\"3/11, 27.27%\\",\\"5/11, 45.45%\\",\\"4/11, 36.36%\\""
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Information: 
              29/162
               records (
              17.90
              %) were discounted due to the following invalid fields: 
              'status' column had timed out call status,'call_end_time' column had missing data
            </p>
          </div>
        </div>
        <div
          class="summary u-mt-m"
        >
          <div
            class="summary__group"
            id="report-table"
          >
            <h3
              class="summary__group-title"
            >
              Call times
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Hours worked
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    26:58:07
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Call time
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    01:31:32
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Hours on calls percentage
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5.66%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Average calls per hour
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    3.86
                  </td>
                </tr>
              </tbody>
            </table>
            <h3
              class="summary__group-title"
            >
              Call status
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Refusals
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/133, 3.01%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Completed successfully
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    0/133, 0.00%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Appointments for contacts
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    81/133, 60.90%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Web nudge
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5/133, 3.76%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      No contacts
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    11/133, 8.27%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Discounted invalid cases
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    29/162, 17.90%
                  </td>
                </tr>
              </tbody>
            </table>
            <h3
              class="summary__group-title"
            >
              Breakdown of No Contact calls
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Answer service
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/11, 36.36%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Busy
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    1/11, 9.09%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Disconnect
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    2/11, 18.18%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      No answer
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    3/11, 27.27%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Invalid telephone number
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5/11, 45.45%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Other
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/11, 36.36%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Reports
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-1"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-2"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <a
        download="interviewer-call-pattern-thorne1.csv"
        href="data:text/csv;charset=utf-8,﻿\\"hours_worked\\",\\"call_time\\",\\"hours_on_calls_percentage\\",\\"average_calls_per_hour\\",\\"refusals\\",\\"completed_successfully\\",\\"appointments_for_contacts\\",\\"web_nudge\\",\\"no_contacts\\",\\"discounted_invalid_cases\\",\\"answer_service\\",\\"busy\\",\\"disconnect\\",\\"no_answer\\",\\"invalid_telephone_number\\",\\"other\\"
\\"26:58:07\\",\\"01:31:32\\",\\"5.66%\\",\\"3.86\\",\\"4/133, 3.01%\\",\\"0/133, 0.00%\\",\\"81/133, 60.90%\\",\\"5/133, 3.76%\\",\\"11/133, 8.27%\\",\\"29/162, 17.90%\\",\\"4/11, 36.36%\\",\\"1/11, 9.09%\\",\\"2/11, 18.18%\\",\\"3/11, 27.27%\\",\\"5/11, 45.45%\\",\\"4/11, 36.36%\\""
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          <p>
            Information: 
            29/162
             records (
            17.90
            %) were discounted due to the following invalid fields: 
            'status' column had timed out call status,'call_end_time' column had missing data
          </p>
        </div>
      </div>
      <div
        class="summary u-mt-m"
      >
        <div
          class="summary__group"
          id="report-table"
        >
          <h3
            class="summary__group-title"
          >
            Call times
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Hours worked
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  26:58:07
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Call time
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  01:31:32
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Hours on calls percentage
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5.66%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Average calls per hour
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  3.86
                </td>
              </tr>
            </tbody>
          </table>
          <h3
            class="summary__group-title"
          >
            Call status
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Refusals
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/133, 3.01%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Completed successfully
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  0/133, 0.00%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Appointments for contacts
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  81/133, 60.90%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Web nudge
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5/133, 3.76%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    No contacts
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  11/133, 8.27%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Discounted invalid cases
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  29/162, 17.90%
                </td>
              </tr>
            </tbody>
          </table>
          <h3
            class="summary__group-title"
          >
            Breakdown of No Contact calls
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Answer service
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/11, 36.36%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Busy
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  1/11, 9.09%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Disconnect
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  2/11, 18.18%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    No answer
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  3/11, 27.27%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Invalid telephone number
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5/11, 45.45%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Other
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/11, 36.36%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() with happy data should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-2"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <a
          download="interviewer-call-pattern-thorne1.csv"
          href="data:text/csv;charset=utf-8,﻿\\"hours_worked\\",\\"call_time\\",\\"hours_on_calls_percentage\\",\\"average_calls_per_hour\\",\\"refusals\\",\\"completed_successfully\\",\\"appointments_for_contacts\\",\\"web_nudge\\",\\"no_contacts\\",\\"discounted_invalid_cases\\",\\"answer_service\\",\\"busy\\",\\"disconnect\\",\\"no_answer\\",\\"invalid_telephone_number\\",\\"other\\"
\\"26:58:07\\",\\"01:31:32\\",\\"5.66%\\",\\"3.86\\",\\"4/133, 3.01%\\",\\"0/133, 0.00%\\",\\"81/133, 60.90%\\",\\"5/133, 3.76%\\",\\"11/133, 8.27%\\",\\"0/133, 0.00%\\",\\"4/11, 36.36%\\",\\"1/11, 9.09%\\",\\"2/11, 18.18%\\",\\"3/11, 27.27%\\",\\"5/11, 45.45%\\",\\"4/11, 36.36%\\""
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="summary u-mt-m"
        >
          <div
            class="summary__group"
            id="report-table"
          >
            <h3
              class="summary__group-title"
            >
              Call times
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Hours worked
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    26:58:07
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Call time
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    01:31:32
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Hours on calls percentage
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5.66%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Average calls per hour
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    3.86
                  </td>
                </tr>
              </tbody>
            </table>
            <h3
              class="summary__group-title"
            >
              Call status
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Refusals
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/133, 3.01%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Completed successfully
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    0/133, 0.00%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Appointments for contacts
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    81/133, 60.90%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Web nudge
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5/133, 3.76%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      No contacts
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    11/133, 8.27%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Discounted invalid cases
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    0/133, 0.00%
                  </td>
                </tr>
              </tbody>
            </table>
            <h3
              class="summary__group-title"
            >
              Breakdown of No Contact calls
            </h3>
            <table
              class="summary__items"
            >
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Answer service
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/11, 36.36%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Busy
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    1/11, 9.09%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Disconnect
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    2/11, 18.18%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      No answer
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    3/11, 27.27%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Invalid telephone number
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    5/11, 45.45%
                  </td>
                </tr>
              </tbody>
              <tbody
                class="summary__item"
              >
                <tr
                  class="summary__row summary__row--has-values"
                >
                  <td
                    class="summary__item-title"
                  >
                    <div
                      class="summary__item--text"
                    >
                      Other
                    </div>
                  </td>
                  <td
                    class="summary__values"
                    colspan="2"
                  >
                    4/11, 36.36%
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Reports
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-1"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-2"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <a
        download="interviewer-call-pattern-thorne1.csv"
        href="data:text/csv;charset=utf-8,﻿\\"hours_worked\\",\\"call_time\\",\\"hours_on_calls_percentage\\",\\"average_calls_per_hour\\",\\"refusals\\",\\"completed_successfully\\",\\"appointments_for_contacts\\",\\"web_nudge\\",\\"no_contacts\\",\\"discounted_invalid_cases\\",\\"answer_service\\",\\"busy\\",\\"disconnect\\",\\"no_answer\\",\\"invalid_telephone_number\\",\\"other\\"
\\"26:58:07\\",\\"01:31:32\\",\\"5.66%\\",\\"3.86\\",\\"4/133, 3.01%\\",\\"0/133, 0.00%\\",\\"81/133, 60.90%\\",\\"5/133, 3.76%\\",\\"11/133, 8.27%\\",\\"0/133, 0.00%\\",\\"4/11, 36.36%\\",\\"1/11, 9.09%\\",\\"2/11, 18.18%\\",\\"3/11, 27.27%\\",\\"5/11, 45.45%\\",\\"4/11, 36.36%\\""
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="summary u-mt-m"
      >
        <div
          class="summary__group"
          id="report-table"
        >
          <h3
            class="summary__group-title"
          >
            Call times
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Hours worked
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  26:58:07
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Call time
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  01:31:32
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Hours on calls percentage
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5.66%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Average calls per hour
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  3.86
                </td>
              </tr>
            </tbody>
          </table>
          <h3
            class="summary__group-title"
          >
            Call status
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Refusals
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/133, 3.01%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Completed successfully
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  0/133, 0.00%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Appointments for contacts
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  81/133, 60.90%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Web nudge
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5/133, 3.76%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    No contacts
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  11/133, 8.27%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Discounted invalid cases
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  0/133, 0.00%
                </td>
              </tr>
            </tbody>
          </table>
          <h3
            class="summary__group-title"
          >
            Breakdown of No Contact calls
          </h3>
          <table
            class="summary__items"
          >
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Answer service
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/11, 36.36%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Busy
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  1/11, 9.09%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Disconnect
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  2/11, 18.18%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    No answer
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  3/11, 27.27%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Invalid telephone number
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  5/11, 45.45%
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item"
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Other
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  4/11, 36.36%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() with only invalid data should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-2"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Information: 
              100/100
               records (
              100.00
              %) were discounted due to the following invalid fields: 
              'status' column had timed out call status,'call_end_time' column had missing data
            </p>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Reports
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-1"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-2"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <div
        class="panel panel--info panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          <p>
            Information: 
            100/100
             records (
            100.00
            %) were discounted due to the following invalid fields: 
            'status' column had timed out call status,'call_end_time' column had missing data
          </p>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() without data should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-2"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            Invalid Date
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            No data found for parameters given.
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Reports
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-1"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="breadcrumb__item"
          id="breadcrumb-2"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          Invalid Date
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <div
        class="panel panel--info panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          No data found for parameters given.
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
